# RealPlotter

./: CMakeLists.txt  README.md
include/: function_entry.h  function_list_model.h  function_list_widget.h  function_table.h  line_editor.h  parse_worker.h  plot_canvas.h  plot_scene.h  plotwidget.h
lib/RealFunctionLib/: CMakeLists.txt
lib/RealFunctionLib/include/RealFunctionLib/: binary_operation_function.h  composite_function.h  constant_function.h  difference_function.h  fraction_function.h  negated_function.h  polynomial.h  power_function.h  product_function.h  real_function.h  real_function_base.h  real_math.h  special_function.h  sum_function.h
lib/RealFunctionLib/src/: binary_operation_function.cpp  composite_function.cpp  constant_function.cpp  difference_function.cpp  fraction_function.cpp  negated_function.cpp  polynomial.cpp  power_function.cpp  product_function.cpp  real_function.cpp  real_math.cpp  special_function.cpp  sum_function.cpp
src/: app.cpp  function_entry.cpp  function_entry.h  function_entry_delegate.cpp  function_entry_delegate.h  function_list.cpp  function_list_model.cpp  function_list_model.h  function_list_view.cpp  function_list_widget.cpp  line_editor.cpp  line_editor.h  main.cpp  plot_canvas.cpp  plot_scene.cpp  plot_scene.h  plot_view.cpp  plot_view.h  plotwidget.cpp  plotwidget.h  real_parser.cpp
src/Graphics/: plot_graph.cpp  plot_graph.h  plot_scene.cpp  plot_scene.h  plot_view.cpp  plot_view.h
src/Graphics/Tools/: circular_scaler.h  plot_calculations.cpp  plot_calculations.h
src/ModelView/: function_entry_delegate.cpp  function_list_model.cpp  function_list_model.h  function_list_view.h
src/Parser/: parse_worker.cpp  parse_worker.h  real_parser.cpp  real_parser.h
src/Structures/: function_entry.cpp  function_table.cpp  function_table.h
src/Widgets/: line_editor.cpp  line_editor.h  plotwidget.h
tests/: .cproject  CMakeLists.txt  tester.cpp
